--- a/public/css/main.css
+++ b/public/css/main.css
@@ -631,6 +631,9 @@ pre code {
   #one {
     margin-bottom: 50px !important;
   }
+  body{
+    text-align:justify;
+  }
 }
 
 @media screen and (max-width: 480px) {
